fix: prevent horizontal overflow

--- a/apps/client/src/components/MainLayout/main-layout.style.css
+++ b/apps/client/src/components/MainLayout/main-layout.style.css
@@ -1,5 +1,6 @@
 .main-layout {
   min-height: 100vh;
+  overflow-x: clip;
 
   main {
     padding-block: 10px;
